--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -19,8 +19,8 @@
     <script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<!-- Vaadin -->
-  	<script src='https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js'></script>
-  	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css">
+  	<script src='../../js/DataTables/DataTables-1.10.10/js/jquery.dataTables.min.js'></script>
+  	<link rel="stylesheet" type="text/css" href="../../js/DataTables/DataTables-1.10.10/css/jquery.dataTables.min.css">
 </head>
 <body>
     <div id="header">
