--- a/WebContent/html5/admin/users2.html
+++ b/WebContent/html5/admin/users2.html
@@ -7,97 +7,43 @@
 <body>
 <div class="container">
 <h2>Lista de Usuários</h2>
-<vaadin-grid  selection-mode="multi" frozen-columns="1">
-  <table>
-  	<colgroup>
-      <col name="id" header-text="Código" width="110px">
-      <col name="nome" header-text="Nome">
-      <col name="email" header-text="Email">
-      <col name="privilegio" header-text="Privilégio">
-    </colgroup>
-  </table>
-</vaadin-grid>
+<table id="example" class="display" cellspacing="0" width="100%"> 
+</table>
+<div class="form-group">
+<button id="add">Adicionar</button>
+<button id="remover">Remover</button>
+<button id="checar">Checar</button>
+</div>
 </div>
 <script>
-  var userlist = [];
-  deletar = [];
-  
-  lista();
-  function lista() { //Pega a lista dos produtos do banco de dados
-		var list = "http://localhost:8080/VirtualQueue/VQ/user/list";
-		$.ajax({
-			type : 'GET',
-			url : list,
-			crossDomain : true,
-			dataType : "json",
-			success : geraTabela, // função de retorno dos userlist
-			error : function(xhr, status, error) {
-				var err = eval("(" + xhr.responseText + ")");
-				alert(err.Message);
-			}
-		});
-	}
-  
-  function geraTabela(data) { // Gera a tabela com os dados coletados
-		userlist = data;
-		var grid = grid || document.querySelector("vaadin-grid");
-		if(userlist.length != 0){ // Botão de deletar
-	  		grid.header.addRow(0, ["","<button id='delete' class='btn btn-default' onclick='deletarProduto(deletar)'>Deletar</button>"]);
-		}
-		HTMLImports.whenReady(function() {
-		    grid.items = userlist;
-		    // Setando as colunas
-		    grid.columns[0].name = "id";
-		    grid.columns[1].name = "nome";
-		    grid.columns[2].name = "email";
-		    grid.columns[3].name = "privilegio";
-		});
-		// Evento de seleção do checkbox
-		grid.addEventListener("select", function() {
-			  deletar = [];
-			  grid.selection.selected(function(index) {
-			    if(index != null)			    
-			      deletar.push(userlist[index].email);
-			      console.log(deletar);
-			  });
-		});
-  } 
-  
-  function deletarProduto(deletar){
-		if (deletar.length == 0) {
-			swal("","Selecione ao menos um produto...")
-		} else {
-			swal({   
-				title: "",   
-				text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
-				type: "",   
-				showCancelButton: true,
-				confirmButtonColor: "#141E5F",   
-				confirmButtonText: "Sim",   
-				cancelButtonText: "Não",   
-				closeOnConfirm: false,   
-				closeOnCancel: true }, 
-				function(isConfirm){   
-					if (isConfirm) {
-						deletar.forEach(function(value) { //Remove do banco de dados cada produto selecionado
-							$.ajax({
-							     type: "POST",
-							     url: "http://localhost:8080/VirtualQueue/VQ/user/deleta",
-							     data: value,
-							     contentType: "application/json; charset=utf-8",
-							     dataType: "json",
-							     processData: true,
-							     success: function (vdata, status, jqXHR) {
-							    	 window.location = "users.html";
-							     },
-							     error: function (xhr) {
-							         alert("Erro" + xhr.responseText);
-							     }
-							});
-						});
-			}});
-		}
-	}
+$(document).ready(function(){
+	$.getJSON( "http://localhost:8080/VirtualQueue/VQ/user/list", function( data ) {
+		  var userlist = data;
+		  var table = $('#example').DataTable( {
+			    scrollY:        '50vh',
+		        scrollCollapse: true,
+		        paging:         false,
+			    "aaData": userlist,
+			    "aoColumns": [
+			      { "sTitle": "Código",   "mData": "id" },
+			      { "sTitle": "Nome",  "mData": "nome" },
+			      { "sTitle": "Descrição", "mData": "email" },
+			      { "sTitle": "Tipo",  "mData": "privilegio" }
+			    ]
+			  } );
+		   
+		    $('#example tbody').on( 'click', 'tr', function () {
+		        $(this).toggleClass('selected');
+		    } );
+		 
+		    $('#checar').click( function () {
+		    	var data = table.rows('.selected').data();
+		    	for (var int = 0; int < data.length; int++) {
+					console.log(data[int]);
+				}
+		    } );
+	});
+}); 
 </script>
 </body>
 </html>
