--- a/WebContent/html5/admin/users2.html
+++ b/WebContent/html5/admin/users2.html
@@ -10,9 +10,9 @@
 <table id="example" class="display" cellspacing="0" width="100%"> 
 </table>
 <div class="form-group">
-<button id="add">Adicionar</button>
-<button id="remover">Remover</button>
-<button id="checar">Checar</button>
+<span class="icon fa-plus"></span>
+<span class="icon fa-pencil-square-o"></span> 
+<span class="icon fa-trash-o"></span>
 </div>
 </div>
 <script>
