--- a/WebContent/html5/admin/produtos2.html
+++ b/WebContent/html5/admin/produtos2.html
@@ -12,7 +12,7 @@
 <div class="form-group">
 <span class="icon fa-plus"></span>
 <span class="icon fa-pencil-square-o"></span>
-<span class="icon fa-trash-o"></span>
+<span id="remover" class="icon fa-trash-o"></span>
 </div>
 </div>
 <script>
@@ -54,7 +54,7 @@ $(document).ready(function(){
 						text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
 						type: "",   
 						showCancelButton: true,
-						confirmButtonColor: "#141E5F",   
+						confirmButtonColor: "#8ebebc",   
 						confirmButtonText: "Sim",   
 						cancelButtonText: "Não",   
 						closeOnConfirm: false,   
