--- a/WebContent/html5/admin/users2.html
+++ b/WebContent/html5/admin/users2.html
@@ -27,8 +27,8 @@ $(document).ready(function(){
 			    "aoColumns": [
 			      { "sTitle": "Código",   "mData": "id" },
 			      { "sTitle": "Nome",  "mData": "nome" },
-			      { "sTitle": "Descrição", "mData": "email" },
-			      { "sTitle": "Tipo",  "mData": "privilegio" }
+			      { "sTitle": "Email", "mData": "email" },
+			      { "sTitle": "Privilégio",  "mData": "privilegio" }
 			    ]
 			  } );
 		   
