--- a/WebContent/html5/admin/newpedido2.html
+++ b/WebContent/html5/admin/newpedido2.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
 <head>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="../../js/newpedido.js"	type="text/javascript"></script>
+	<script src="../../js/newpedido2.js"	type="text/javascript"></script>
 	<!-- Scripts do jsPDF -->
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.js"></script>
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script> 
@@ -13,7 +11,7 @@
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.autotable.js"></script>
 </head>
 <body onload="updateClock()">
-	<div id="container" class="container">
+	<div class="container">
 		<h2>Pedido</h2><br>
 		<div class="form-group">
 			<div class="form-group" id="combo"></div>
@@ -22,7 +20,8 @@
 			<button onclick="addProduto(); valor_pedido();">Adicionar</button>	
 		</div>
 		<div id="customers">
-			<table id="myTable" border="1" class="table table-hover">
+			<table id="example" class="display" cellspacing="0" width="100%"></table>
+			<!-- <table id="myTable" border="1" class="table table-hover">
 				<tr>
 					<th>Código</th>
 					<th>Nome</th>
@@ -39,7 +38,7 @@
 					<td id="valor"><b>R$0,00</b></td>
 				</tr>
 				</tbody>
-			</table>
+			</table> -->
 		</div>
 		
 		<div class="form-group">
@@ -52,4 +51,3 @@
 		</div>
 		</div>
 </body>
-</html>
