--- a/WebContent/html5/admin/users2.html
+++ b/WebContent/html5/admin/users2.html
@@ -23,6 +23,7 @@ $(document).ready(function(){
 			    scrollY:        '50vh',
 		        scrollCollapse: true,
 		        paging:         false,
+		        "language": {"emptyTable": "Nenhum Usuário Cadastrado"},
 			    "aaData": userlist,
 			    "aoColumns": [
 			      { "sTitle": "Código",   "mData": "id" },
