--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -48,7 +48,7 @@
 	    					        	swal("","Usuário e/ou senha inválido")
 									} else {
 										if (vdata == "Administrador") {
-											window.location = "admin/home.html";
+											window.location = "admin/index.html";
 										} else {
 											window.location = "users/home.html";
 										}
