--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -55,7 +55,7 @@
         <!-- Copyright -->
         <ul class="copyright">
             <li>&copy; All rights reserved.</li>
-            <li>Done: <a href="#">Matheus S Hofart</a> e <a href="#">Gabriel Tagliari</a></li>
+            <li>Done: <a href="#">Matheus S Hofart</a> e <a href="#">Gabriel Tagliari Rodrigo</a></li>
         </ul>
     </div>
     <script>
