--- a/WebContent/html5/admin/newpedido2.html
+++ b/WebContent/html5/admin/newpedido2.html
@@ -22,14 +22,13 @@
 		<div id="customers">
 			<table id="example" class="display" cellspacing="0" width="100%"></table>
 		</div>
-		
 		<div class="form-group">
 			<h4><label id="senha"></label></h4>
 			<h4><label id="data"></label></h4>
 			<h4><label id="clock"></label></h4>
 		</div>
-		<div class="form-group">		
-				<button id="fecha" onclick="geraPdf()">Finalizar Pedido</button>
+		<div class="form-group">
+			<button onclick="teste()">Adicionar</button>	
 		</div>
 		</div>
 </body>
