--- a/WebContent/html5/admin/newpedido2.html
+++ b/WebContent/html5/admin/newpedido2.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<div class="container">
+	<div id="teste">
 		<h2>Pedido</h2><br>
 		<div class="form-group">
 			<div class="form-group" id="combo"></div>
@@ -31,4 +32,5 @@
 			<button id="finaliza" >Finalizar Pedido</button>	
 		</div>
 		</div>
+	</div>
 </body>
