--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -62,12 +62,12 @@
     </div>
     <script>
 	    $(document).ready(function(){
-	    	$("#home-link").on("click",function(){$("#conteudo").load('home2.html');});
-	    	$("#produtos-link").on("click",function(){$("#conteudo").load('produtos2.html');});
-	    	$("#newproduto-link").on("click",function(){$("#conteudo").load('newproduto2.html');});
-	    	$("#pedidos-link").on("click",function(){$("#conteudo").load('newpedido2.html');});
-	    	$("#usuarios-link").on("click",function(){$("#conteudo").load('users2.html');});
-	    	$("#newuser-link").on("click",function(){$("#conteudo").load('newuser2.html');});
+	    	$("#home-link").on("click",function(){$("#conteudo").load('home.html');});
+	    	$("#produtos-link").on("click",function(){$("#conteudo").load('produtos.html');});
+	    	$("#newproduto-link").on("click",function(){$("#conteudo").load('newproduto.html');});
+	    	$("#pedidos-link").on("click",function(){$("#conteudo").load('newpedido.html');});
+	    	$("#usuarios-link").on("click",function(){$("#conteudo").load('users.html');});
+	    	$("#newuser-link").on("click",function(){$("#conteudo").load('newuser.html');});
 	    });    
     </script>
 </body>
