--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -1,7 +1,7 @@
 <head>
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="../../js/newpedido2.js"	type="text/javascript"></script>
+	<script src="../../js/newpedido.js"	type="text/javascript"></script>
 	<!-- Scripts do jsPDF -->
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.js"></script>
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script> 
