--- a/WebContent/html5/admin/newproduto.html
+++ b/WebContent/html5/admin/newproduto.html
@@ -4,7 +4,7 @@
 <title>Virtual Queue</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="../../js/newproduto2.js" type="text/javascript"></script>
+	<script src="../../js/newproduto.js" type="text/javascript"></script>
 </head>
     <body>
         <div class="container">
