--- a/WebContent/html5/users/newpedido.html
+++ b/WebContent/html5/users/newpedido.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
 <head>
-<title>Virtual Queue</title>
-	<meta charset="UTF-8">
+<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../../css/newpedido.css">
-	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<script src="../../js/newpedido.js"	type="text/javascript"></script>
-	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
 	<!-- Scripts do jsPDF -->
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.js"></script>
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script> 
@@ -18,9 +10,9 @@
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.min.js"></script>
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.autotable.js"></script>
 </head>
-<body onload="updateClock()">
-	<div id="header"></div>
-	<div id="container" class="container">
+<body>
+	<div class="container">
+	<div id="teste">
 		<h2>Pedido</h2><br>
 		<div class="form-group">
 			<div class="form-group" id="combo"></div>
@@ -29,37 +21,16 @@
 			<button onclick="addProduto(); valor_pedido();">Adicionar</button>	
 		</div>
 		<div id="customers">
-			<table id="myTable" border="1" class="table table-hover">
-				<tr>
-					<th>Código</th>
-					<th>Nome</th>
-					<th>Preço</th>
-					<th>Quantidade</th>
-					<th id="remove">Remover</th>
-				</tr>
-				<tbody>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td align="right"><b>TOTAL: </b></td>
-					<td id="valor"><b>R$0,00</b></td>
-				</tr>
-				</tbody>
-			</table>
+			<table id="example" class="display" cellspacing="0" width="100%"></table>
 		</div>
-		
-		<div class="form-group">
+		<div id="dados" class="form-group">
 			<h4><label id="senha"></label></h4>
 			<h4><label id="data"></label></h4>
 			<h4><label id="clock"></label></h4>
 		</div>
-		<div class="form-group">		
-				<button id="fecha" onclick="fechar_pedido()">Finalizar Pedido</button>
-				<button onclick="verifica_pedido()">Ver dados do Pedido</button>
+		<div class="form-group">
+			<button id="finaliza" >Finalizar Pedido</button>	
 		</div>
 		</div>
-		<br><br><br><br><br><br>
-		<div id="footer"></div>
+	</div>
 </body>
-</html>
