--- a/WebContent/html5/users/produtos.html
+++ b/WebContent/html5/users/produtos.html
@@ -1,69 +1,127 @@
-<!DOCTYPE html>
-<html>
 <head>
-<title>Virtual Queue</title>
-<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
-	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
-	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
-	<script src="../../js/menuandfooter.js"	type="text/javascript"></script>
-	<script src='https://cdn.vaadin.com/vaadin-elements/latest/webcomponentsjs/webcomponents-lite.js'></script>
-  	<link href='https://cdn.vaadin.com/vaadin-elements/latest/vaadin-grid/vaadin-grid.html' rel='import'>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="../../css/modal.css">
 </head>
 <body>
-<div id="header"></div>
-<div class="container">
-<h2>Lista de Produtos</h2>
-<vaadin-grid frozen-columns="1">
-  <table>
-  	<colgroup>
-      <col name="id" header-text="Código" width="70px">
-      <col name="nome" header-text="Nome">
-      <col name="descricao" header-text="Descrição" width="600px">
-      <col name="tipo" header-text="Tipo">
-      <col name="preco" header-text="Preço">
-    </colgroup>
-  </table>
-</vaadin-grid>
-</div>
-<div id="footer"></div>
-<script>
-  var produtolist = [];
-  
-  lista();
-  function lista() {
-		var list = "http://localhost:8080/VirtualQueue/VQ/produto/list";
-		$.ajax({
-			type : 'GET',
-			url : list,
-			crossDomain : true,
-			dataType : "json",
-			success : carregaProduto, // função de retorno dos produtolist
-			error : function(xhr, status, error) {
-				var err = eval("(" + xhr.responseText + ")");
-				alert(err.Message);
-			}
-		});
-	}
-  
-  function carregaProduto(data) { // gerar Combo dos produtolist
-		produtolist = data;
-		var grid = grid || document.querySelector("vaadin-grid");
-		HTMLImports.whenReady(function() {
-		    // code
-		    grid.items = produtolist;
-		    // Optionally set the column names in JS
-		    grid.columns[0].name = "id";
-		    grid.columns[1].name = "nome";
-		    grid.columns[2].name = "descricao";
-		    grid.columns[3].name = "tipo";
-		    grid.columns[4].name = "preco";
-		    // end-code
-		});
-  }
-</script>
+   	<div class="container">
+		<h2>Lista de Produtos</h2>
+		<table id="example" class="display compact" cellspacing="0" width="100%"></table>
+		<div class="form-group">
+		<a href="#openModalCreate"><span class="icon fa-plus"></span></a>
+		<a href="#openModalEdit"><span class="icon fa-pencil-square-o"></span></a>
+		<span id="remover" class="icon fa-trash-o"></span>
+		</div>
+		
+    </div>
+    <div id="openModalCreate" class="modalDialog">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Cadastrar Produto</h2>
+            <form id="form" action="../../VQ/produto/createform" method="GET">
+                <p class="form-group">
+                    <label for="inputName">Nome: </label>
+                    <input type="text" id="name" name="nome" autofocus="autofocus" required>
+                </p>
+                <p class="form-group">
+                    <label for="inputDescription">Descrição: </label>
+                    <input type="text" id="descricao" name="descricao">
+                </p>
+                <p class="form-group">
+                    <label for="inputCategory">Categoria: </label>
+                    <input type="text" id="tipo" name="tipo" required>
+                </p>
+                <p class="form-group">
+                    <label for="inputPrice">Valor: </label>
+                    <input for="number" id="preco" name="preco" required>
+                </p>  
+                <button>Cadastrar</button>
+            </form>
+    </div>
+	</div><div id="openModalEdit" class="modalDialog">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Editar Produto</h2>
+            <form id="form" action="../../VQ/produto/createform" method="GET">
+                <p class="form-group">
+                    <label for="inputName">Nome: </label>
+                    <input type="text" id="name" name="nome" autofocus="autofocus" required>
+                </p>
+                <p class="form-group">
+                    <label for="inputDescription">Descrição: </label>
+                    <input type="text" id="descricao" name="descricao">
+                </p>
+                <p class="form-group">
+                    <label for="inputCategory">Categoria: </label>
+                    <input type="text" id="tipo" name="tipo" required>
+                </p>
+                <p class="form-group">	
+                    <label for="inputPrice">Valor: </label>
+                    <input for="number" id="preco" name="preco" required>
+                </p>  
+                <button>Cadastrar</button>
+            </form>
+    </div>
+	</div>
+    <script>
+	    $(document).ready(function(){
+	    	$.getJSON( "http://localhost:8080/VirtualQueue/VQ/produto/list", function( data ) {
+	    		var produtolist = data;
+	    		var table = $('#example').DataTable( {
+	  			    scrollY:        '50vh',
+	  		        scrollCollapse: true,
+	  		        paging:         false,
+	  		        "language": {"emptyTable": "Nenhum Produto Cadastrado"},
+	  			    "aaData": produtolist,
+	  			    "aoColumns": [
+	  			      { "sTitle": "Código",   "mData": "id" },
+	  			      { "sTitle": "Nome",  "mData": "nome" },
+	  			      { "sTitle": "Descrição", "mData": "descricao" },
+	  			      { "sTitle": "Tipo", "mData": "tipo" },
+	  			      { "sTitle": "Preco", "mData": "preco", render: $.fn.dataTable.render.number( '.', ',', 2, 'R$ ' )}
+	  			    ]
+	  			  });
+	    	 
+	    		 $('#example tbody').on( 'click', 'tr', function () {
+		  		        $(this).toggleClass('selected');
+		  		 });
+	    			  		 
+	  		    $('#remover').click( function () {
+	  		    	var data = table.rows('.selected').data();
+	  				if (data.length == 0) {
+	  					swal("","Selecione ao menos um produto...")
+	  				} else {
+	  					swal({   
+	  						title: "",   
+	  						text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
+	  						type: "",   
+	  						showCancelButton: true,
+	  						confirmButtonColor: "#8ebebc",   
+	  						confirmButtonText: "Sim",   
+	  						cancelButtonText: "Não",   
+	  						closeOnConfirm: true,   
+	  						closeOnCancel: true }, 
+	  						function(isConfirm){   
+	  							if (isConfirm) {
+	  									for (var int = 0; int < data.length; int++) {
+	  										$.ajax({
+	  										     type: "POST",
+	  										     url: "http://localhost:8080/VirtualQueue/VQ/produto/deleta",
+	  										     data: JSON.stringify(data[int].id),
+	  										     contentType: "application/json; charset=utf-8",
+	  										     dataType: "json",
+	  										     processData: true,
+	  										     success: function (vdata, status, jqXHR) {
+	  										    	 $("#conteudo").load("produtos.html");
+	  										     },
+	  										     error: function (xhr) {
+	  										         alert("Erro" + xhr.responseText);
+	  										     }
+	  										});
+	  									}
+	  					}});
+	  				}
+	  		    });	    
+	  	});
+	    });    
+    </script>
 </body>
-</html>
