--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -9,7 +9,7 @@
 		<div class="form-group">
 		<a href="#openModalCreate"><span class="icon fa-plus"></span></a>
 		<a href="#openModalEdit"><span class="icon fa-pencil-square-o"></span></a>
-		<span id="remover" class="icon fa-trash-o"></span>
+		<a href="#"><span id="remover" class="icon fa-trash-o"></span></a>
 		</div>
 		
     </div>
@@ -37,7 +37,8 @@
                 <button>Cadastrar</button>
             </form>
     </div>
-	</div><div id="openModalEdit" class="modalDialog">
+	</div>
+	<div id="openModalEdit" class="modalDialog">
         <div>
             <a href="#close" title="Close" class="close">X</a>
             <h2>Editar Produto</h2>
