--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -51,15 +51,16 @@
             </ul>
         </div>
     </div>
-    <div id="conteudo"></div>
+    
     <!-- Footer -->
-    <div id="footer">
-        <!-- Copyright -->
+    <!-- <div id="footer">
+        Copyright
         <ul class="copyright">
             <li>&copy; All rights reserved.</li>
             <li>Done: <a href="#">Matheus S Hofart</a> e <a href="#">Gabriel Tagliari Rodrigo</a></li>
         </ul>
-    </div>
+    </div> -->
+    <div id="conteudo"></div>
     <script>
 	    $(document).ready(function(){
 	    	$("#home-link").on("click",function(){$("#conteudo").load('home.html');});
