INTRODUÇÃO e Alteração Datatable

--- a/WebContent/html5/admin/home.html
+++ b/WebContent/html5/admin/home.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 <div class="container">
-<h1 align="center" style="align:middle;">Bem-vindo!</h1>
+<h2 align="center" style="align:middle;">Bem-vindo!</h2><br>
+<p>Esse sistema foi desenvolvido para trazer aos usuários uma forma mais fácil e ágil no atendimento.
+Tem um designer moderno e responsivo com configurações que dão opções de listagens onde os usuários podem consultar os dados cadastrados e os gerentes tem a opção de fazer exclusões tanto dos produtos quanto dos usuários. Gera uma senha assim que o pedido é concluído trazendo comodidade aos clientes que podem percorrer pelo local enquanto aguardam seu pedido.</p>
+
 </div>
 </body>
 </html>
